Fixed image getting overlapped by navBar for smaller screen devices

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,6 @@ a {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
   background-color: #000;
   background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
 }
@@ -224,6 +223,10 @@ h1 {
 
   .index div {
     display: none;
+  }
+
+  .dev {
+    font-size: 2em;
   }
 }
 
